@@ -12,8 +12,8 @@ AC_CONFIG_AUX_DIR(maint/config)
 dnl PVFS2 versioning information
 PVFS2_MAJOR=0
 PVFS2_MINOR=0
-PVFS2_SUB=2
-PVFS2_PRE=""
+PVFS2_SUB=3
+PVFS2_PRE="pre1"
 
 AM_INIT_AUTOMAKE(pvfs2, $PVFS2_MAJOR.$PVFS2_MINOR.$PVFS2_SUB$PVFS2_PRE)
 
